fix even more files

--- a/behind-the-cosplay.html
+++ b/behind-the-cosplay.html
@@ -52,34 +52,57 @@
     <!-- Section 1 -->
     <div class="art-section">
       <div class="art-header">
-          <div class="art-display"><div class="full-image short-p">
         <h2>Behind the Cosplay</h2>
-        <img src="https://static1.squarespace.com/static/5abd1e517e3c3a8774569b21/5ac3d06388251b42df41d002/5af4914eaa4a994407f6c85d/1537982635363/btc_thumb.png?format=2500w">
-        <p>Animated and designed video graphics for IGN's <a class="active-link" target="_blank" href="https://www.ign.com/watch/behind-the-cosplay">Behind the Cosplay</a> mini-documentary series centered around cosplaying Iden Versio, the protagonist of Star Wars: Battlefront II.</p>
-        <br>  
+      </div>
+      <div class="art-display">
+        <!-- Row 1 -->
+        <div class="full-image loading-icon">
+          <img src="https://static1.squarespace.com/static/5abd1e517e3c3a8774569b21/5ac3d06388251b42df41d002/5af4914eaa4a994407f6c85d/1537982635363/btc_thumb.png?format=2500w">
+        </div>
+        <!-- Row 2 -->
+        <div class="art-sub-header">
+          <p>Animated and designed video graphics for IGN's <a class="active-link" target="_blank" href="https://www.ign.com/watch/behind-the-cosplay">Behind the Cosplay</a> mini-documentary series centered around cosplaying Iden Versio, the protagonist of Star Wars: Battlefront II.</p>
+          <br>  
           <p>Watch the first episode below:</p>
-        
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/kCnd4X863xc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
-      </div></div>
+        </div>
+        <div class="full-image loading-icon">
+          <div class="embed-container">
+            <iframe src="https://www.youtube.com/embed/kCnd4X863xc" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+          </div>
+        </div>        
+      </div>
       <hr>
     </div>
+     
     <!-- Section 2 -->
     <div class="art-section">
       <div class="art-display">
-        <div class="full-image short-p">
+        <!-- Row 1 -->
+        <div class="art-sub-header">
           <p>Logo animation based on the idea of stitching cosplay. Logo/title was designed by Matt Kruse.</p>
+        </div>
+        <div class="full-image loading-icon">
           <img src="https://puu.sh/C8fYq/b34e98ad32.gif">
         </div>
-        <div class="full-image loading-icon">
+        <!-- Row 2 -->
+        <div class="art-sub-header">
           <p>Episode title that appears after the logo animation.</p>
+        </div>
+        <div class="full-image loading-icon">
           <img src="https://puu.sh/BmCDC/a965eedcd6.gif">
         </div>
-        <div class="full-image loading-icon">
+        <!-- Row 3 -->
+        <div class="art-sub-header">
           <p>Animated the co-branded snipe that appears at the bottom of the videos.</p>
-          <img src="https://puu.sh/C8eqb.gif">
         </div>
         <div class="full-image loading-icon">
+          <img src="https://puu.sh/C8eqb.gif">
+        </div>
+        <!-- Row 4 -->
+        <div class="art-sub-header">
           <p>Animated lower third video asset that was templatized for Video Team's usage.</p>
+        </div>
+        <div class="full-image loading-icon">
           <img src="https://puu.sh/C2ihE/ef74b949d4.gif">
         </div>
       </div>
