--- a/contact.html
+++ b/contact.html
@@ -60,24 +60,28 @@
       <div id="contact-social">
         <h2>Connect</h2>
         <div>
+          <!-- Twitter -->
           <div class="social-account">
             <a target="_blank" href="https://twitter.com/kaeveeoh">
               <img class="social-icon" src="img/twitter.svg" alt="twitter">
               <h3>Twitter</h3>
             </a>
           </div>
+          <!-- Tumblr -->
           <div class="social-account">
             <a target="_blank" href="https://kaeveeoh-art.tumblr.com/">
               <img class="social-icon tumblr-icon" src="img/tumblr.svg" alt="tumblr">
               <h3>Tumblr</h3>
             </a>
           </div>
+          <!-- Dribble -->
           <div class="social-account">
             <a target="_blank" href="https://dribbble.com/kaeveeoh">
               <img class="social-icon" src="img/dribbble.svg" alt="dribbble">
               <h3>Dribbble</h3>
             </a>
           </div>
+          <!-- LinkedIn -->
           <div class="social-account">
             <a target="_blank" href="https://www.linkedin.com/in/kathleen-oum/">
               <img class="social-icon" src="img/linkedin.svg" alt="dribbble">
@@ -87,6 +91,7 @@
         </div>
       </div>
     </div>
+    <!-- Form -->
     <div id="form-section">
       <form id="contact-form" action="https://docs.google.com/forms/d/e/1FAIpQLSePzu0CYeHkR8F2jm070_l8MkYaYeftJblVJqS9CljrkiKqSQ/formResponse" target="_self" method="POST" id="mG61Hd">
         <input type="text" id="input-name" name="entry.2005620554" placeholder="Name" required/>
