--- a/e3-booth.html
+++ b/e3-booth.html
@@ -57,75 +57,90 @@
         <br>
         <p><a class="active-link" target="_blank" href="http://studios.ign.com/review/E3_2017/monitor/ign/">View the full animation here.</a></p>
       </div>
-        <!--IGN Stats-->
-        <div class="art-display">
+      <!--IGN Stats-->
+      <div class="art-display">
+        <!-- Row 1 -->
         <div class="quarter-image loading-icon">
           <img src="https://78.media.tumblr.com/b8bcc754940c81d24f3a5a5d560e5513/tumblr_orm64lSyUY1vihf3to6_400.gif">
         </div>
         <div class="quarter-image loading-icon">
-            <img src="https://78.media.tumblr.com/10eb812640c78158a1d7f1ae8e221263/tumblr_orm64lSyUY1vihf3to5_400.gif">
-          </div>
+          <img src="https://78.media.tumblr.com/10eb812640c78158a1d7f1ae8e221263/tumblr_orm64lSyUY1vihf3to5_400.gif">
+        </div>
         <div class="quarter-image loading-icon">
           <img src="https://78.media.tumblr.com/fc96a1d39ce485f7b4d8dceb1ee7abf8/tumblr_orm64lSyUY1vihf3to4_400.gif">
         </div>
         <div class="quarter-image loading-icon">
-            <img src="https://78.media.tumblr.com/68565cb798a26d2a61b23b28d310c83f/tumblr_orm64lSyUY1vihf3to3_400.gif">
-      </div>
-      <div class="half-image loading-icon">
-            <img src="https://78.media.tumblr.com/c629ea0f4910516eeda212eb31584fe1/tumblr_pcrrgnPlD51tmp8rdo2_r2_1280.png">
+          <img src="https://78.media.tumblr.com/68565cb798a26d2a61b23b28d310c83f/tumblr_orm64lSyUY1vihf3to3_400.gif">
+        </div>
+        <!-- Row 2 -->
+        <div class="half-image loading-icon">
+          <img src="https://78.media.tumblr.com/c629ea0f4910516eeda212eb31584fe1/tumblr_pcrrgnPlD51tmp8rdo2_r2_1280.png">
+        </div>
       </div>
     </div>
 
-
+    <!-- Section 2 -->
+    <div class="art-section">
       <div class="art-header">
-            <p>To play alongside the stats videos, I created a Top 10 List animation that would show the top 10 E3 games of each console during the convention. Each list was made into an easily editable template for on-site editors to adjust and render while keeping all animation untouched. Booth design done by <a class="active-link" target="_blank" href="https://lunarsaloon.com/">Lunar Saloon</a></p>
-            <br>
-            <p><a class="active-link" target="_blank" href="http://studios.ign.com/review/E3_2017/monitor/ign/top10/">View the full Top 10 animation here.</a></p>
-          </div>
-          <div class="art-display">
+        <p>To play alongside the stats videos, I created a Top 10 List animation that would show the top 10 E3 games of each console during the convention.
+          Each list was made into an easily editable template for on-site editors to adjust and render while keeping all animation untouched.
+          Booth design done by <a class="active-link" target="_blank" href="https://lunarsaloon.com/">Lunar Saloon</a></p>
+        <br>
+        <p><a class="active-link" target="_blank" href="http://studios.ign.com/review/E3_2017/monitor/ign/top10/">View the full Top 10 animation here.</a></p>
+      </div>
+      <div class="art-display">
+        <!-- Row 1 -->
         <div class="full-image loading-icon">
           <img src="https://66.media.tumblr.com/d251d5457ab58443df4ab85747635d69/tumblr_orm60nb6Oh1vihf3to8_r1_1280.jpg">
         </div>
+        <!-- Row 2 -->
         <div class="full-image loading-icon">
-                <img src="https://78.media.tumblr.com/23742910516578772e6b421ac38f3f69/tumblr_pcrrgnPlD51tmp8rdo3_r2_1280.png">
+          <img src="https://78.media.tumblr.com/23742910516578772e6b421ac38f3f69/tumblr_pcrrgnPlD51tmp8rdo3_r2_1280.png">
+        </div>
+        <!-- Row 3 -->
+        <div class="half-image loading-icon">
+          <img src="https://78.media.tumblr.com/88822adf8a55740baeb0e0b25ed4d08a/tumblr_pcrrgnPlD51tmp8rdo6_r1_400.png">
         </div>
         <div class="half-image loading-icon">
-                <img src="https://78.media.tumblr.com/88822adf8a55740baeb0e0b25ed4d08a/tumblr_pcrrgnPlD51tmp8rdo6_r1_400.png">
-          </div>
-          <div class="half-image loading-icon">
-                <img src="https://78.media.tumblr.com/91c7324b015b0f5d7c1a406cc83841b8/tumblr_pcrrgnPlD51tmp8rdo5_r2_400.png">
-          </div>
+          <img src="https://78.media.tumblr.com/91c7324b015b0f5d7c1a406cc83841b8/tumblr_pcrrgnPlD51tmp8rdo5_r2_400.png">
+        </div>
       </div>
+    </div>
 
+    <!-- Section 3 -->
+    <div class="art-section">
       <div class="art-header">
-          <p>In 2018, I got to revisit the animated lists and update it to match IGN's booth design for E3 2018.  A golden frame was given to each list to mimic the showcase theme found throughout the booth. Booth design done by <a class="active-link" target="_blank" href="https://lunarsaloon.com/">Lunar Saloon</a>. </p><br>
-
-        <!--IGN Stats-->
-        <div class="art-display">
+        <p>In 2018, I got to revisit the animated lists and update it to match IGN's booth design for E3 2018.
+          A golden frame was given to each list to mimic the showcase theme found throughout the booth.
+          Booth design done by <a class="active-link" target="_blank" href="https://lunarsaloon.com/">Lunar Saloon</a>.</p><br>
+      </div>
+      <!--IGN Stats-->
+      <div class="art-display">
+        <!-- Row 1 -->
         <div class="quarter-image loading-icon">
           <img src="https://66.media.tumblr.com/1ecb18dca214976a5fa6b4258ed42152/tumblr_pitsk0uLcD1tmp8rdo1_400.png">
         </div>
         <div class="quarter-image loading-icon">
-            <img src="https://66.media.tumblr.com/80679e623deaa6bc24692e6d392355d8/tumblr_pitsk0uLcD1tmp8rdo2_400.png">
-          </div>
+          <img src="https://66.media.tumblr.com/80679e623deaa6bc24692e6d392355d8/tumblr_pitsk0uLcD1tmp8rdo2_400.png">
+        </div>
         <div class="quarter-image loading-icon">
           <img src="https://66.media.tumblr.com/00a76962ac4e4a5f8da48fce0d149069/tumblr_pitsk0uLcD1tmp8rdo3_400.png">
         </div>
         <div class="quarter-image loading-icon">
-            <img src="https://66.media.tumblr.com/bae94f58f9c712b80fbb2fc8eb969ceb/tumblr_pitsk0uLcD1tmp8rdo4_400.png">
-      </div>
-      
-      <div class="full-image loading-icon">
-              <img src="https://66.media.tumblr.com/c262eedc413d7bd198a666099834b451/tumblr_pan7luYnPV1vihf3to2_1280.jpg">
-      </div>
-      <div class="half-image loading-icon">
-          <img src="https://66.media.tumblr.com/f0d55b57ce246166d4406f7d7499a18f/tumblr_pan7luYnPV1vihf3to3_1280.jpg">
-    </div>
-      <div class="half-image loading-icon">
-              <img src="https://66.media.tumblr.com/686fe335a7b078b4828dc1491887cb63/tumblr_pan7luYnPV1vihf3to4_1280.jpg">
+          <img src="https://66.media.tumblr.com/bae94f58f9c712b80fbb2fc8eb969ceb/tumblr_pitsk0uLcD1tmp8rdo4_400.png">
         </div>
-    </div>
-
+        <!-- Row 2 -->
+        <div class="full-image loading-icon">
+          <img src="https://66.media.tumblr.com/c262eedc413d7bd198a666099834b451/tumblr_pan7luYnPV1vihf3to2_1280.jpg">
+        </div>
+        <!-- Row 3 -->
+        <div class="half-image loading-icon">
+          <img src="https://66.media.tumblr.com/f0d55b57ce246166d4406f7d7499a18f/tumblr_pan7luYnPV1vihf3to3_1280.jpg">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://66.media.tumblr.com/686fe335a7b078b4828dc1491887cb63/tumblr_pan7luYnPV1vihf3to4_1280.jpg">
+        </div>
+      </div>
       <hr>
     </div>
   </div>
