--- a/antman.html
+++ b/antman.html
@@ -53,54 +53,75 @@
     <div class="art-section">
       <div class="art-header">
         <h2>Ant-Man and the Wasp</h2>
-        <div class="art-display">
-        <div class="full-image">
-            <img src="https://static1.squarespace.com/static/5abd1e517e3c3a8774569b21/5ac3d06388251b42df41d002/5b64b1680e2e725edeb632bc/1537982411756/AntmanWasp_thumb.png?format=2500w">
-        <p>I was tasked with creating HUD cams based on Ant-Man and Wasp's POV for Disney's sponsorship of IGN's E3 2018 coverage. Inspiration was drawn from their costumes and the movie's ad branding. </p>
       </div>
-      <p>Ant-Man HUD in action:</p>
+      <div class="art-display">
+        <!-- Row 1 -->
         <div class="full-image loading-icon">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/3MS5oKcRp1s?start=2920" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          <img src="https://static1.squarespace.com/static/5abd1e517e3c3a8774569b21/5ac3d06388251b42df41d002/5b64b1680e2e725edeb632bc/1537982411756/AntmanWasp_thumb.png?format=2500w">
+        </div>
+        <!-- Row 2 -->
+        <div class="art-sub-header">
+          <p>I was tasked with creating HUD cams based on Ant-Man and Wasp's POV for Disney's sponsorship of IGN's E3 2018 coverage.
+            Inspiration was drawn from their costumes and the movie's ad branding.</p>
+          <br>
+          <p>Ant-Man HUD in action:</p>
         </div>
         <div class="full-image loading-icon">
-            <p>Wasp HUD in action:</p>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/3MS5oKcRp1s?start=5225" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>   </div></div>
+          <div class="embed-container">
+            <iframe src="https://www.youtube.com/embed/3MS5oKcRp1s?start=2920" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+          </div>
+        </div>
+        <!-- Row 3 -->
+        <div class="art-sub-header">
+          <p>Wasp HUD in action:</p>
+        </div>
+        <div class="full-image loading-icon">
+          <div class="embed-container">
+            <iframe src="https://www.youtube.com/embed/3MS5oKcRp1s?start=5225" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+          </div>
         </div>
       </div>
       <hr>
     </div>
-        
-      <!-- Logo -->
 
+    <!-- Section 2 -->
     <div class="art-section">
       <div class="art-display">
-        <div class="full-image">
-          <p>Static drafts of the cams.  Not the final one used by the video team, but one of the explorations. </p>
-          <img src="https://78.media.tumblr.com/b1a905c978e166fae67cdb045e6918ea/tumblr_pcjls4WIzE1tmp8rdo1_1280.png">
+        <!-- Row 1 -->
+        <div class="art-sub-header">
+          <p>Static drafts of the cams.
+            Not the final one used by the video team, but one of the explorations.</p>
         </div>
         <div class="full-image loading-icon">
+          <img src="https://78.media.tumblr.com/b1a905c978e166fae67cdb045e6918ea/tumblr_pcjls4WIzE1tmp8rdo1_1280.png">
+        </div>
+        <!-- Row 2 -->
+        <div class="full-image loading-icon">
           <img src="https://78.media.tumblr.com/7ecc5927975bef7076fc549582059b65/tumblr_pcjls4WIzE1tmp8rdo2_1280.png">
-        </div></div>
-        <!--Animated versions-->
-        <div class="art-display">
-            <p>Animated the branded snipes that appear for a few seconds on the cams </p>
-          <div class="half-image loading-icon">
-            <img src="https://media.giphy.com/media/4Tf0YvlhVyNqUdCAjy/giphy.gif">
-          </div>
-          <div class="half-image loading-icon">
-              <img src="https://media.giphy.com/media/eF8AlSjnH94V503Dej/giphy.gif">
-            </div></div>
-          <!--Snipe-->
-      <div class="art-display">
-          <p>Animated the branded snipes that appear for a few seconds on the cams </p>
+        </div>
+        <!-- Row 3 -->
+        <!-- Animations -->
+        <div class="art-sub-header">
+          <p>Animated the branded snipes that appear for a few seconds on the cams.</p>
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://media.giphy.com/media/4Tf0YvlhVyNqUdCAjy/giphy.gif">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://media.giphy.com/media/eF8AlSjnH94V503Dej/giphy.gif">
+        </div>
+        <!-- Row 4 -->
+        <!-- Snipes -->
+        <div class="art-sub-header">
+          <p>Animated the branded snipes that appear for a few seconds on the cams.</p>
+        </div>
         <div class="half-image loading-icon">
           <img src="https://puu.sh/B3Jag/9af428f1e2.gif">
         </div>
         <div class="half-image loading-icon">
-            <img src="https://puu.sh/B3Jbb/159a874bc8.gif">
-          </div></div>
-
-
+          <img src="https://puu.sh/B3Jbb/159a874bc8.gif">
+        </div>
+      </div>
       <hr>
     </div>
   </div>
