--- a/ads.html
+++ b/ads.html
@@ -54,56 +54,59 @@
       <div class="art-header">
         <h2>General Ads for IGN</h2>
         <p>Below are some of the advertisement work I do as part of the in-house sales design team at IGN.</p>
-         </div><hr>  </div>
+      </div>
+      <hr>
+    </div>
 
-         <div class="art-section">
-          <div class="art-header">
-            <h2>Snipes</h2>
+    <!-- Section 2 -->
+    <div class="art-section">
+      <div class="art-header">
+        <h2>Snipes</h2>
         <p>Snipes are branded video graphics that appear for a few seconds on the bottom left corner of a video to showcase who is sponsoring it.</p>
       </div>
+      <div class="art-display">
         <!--Row 1-->
-        <div class="art-display">
         <div class="half-image loading-icon">
           <img src="https://66.media.tumblr.com/1f25cd09696f179fd907236c2b49aac0/tumblr_pizj5dUNwY1tmp8rdo8_1280.jpg">
         </div>
         <div class="half-image loading-icon">
-            <img src="https://66.media.tumblr.com/336278e71b4ecf8dbdb694cf8453008e/tumblr_pizj49eSnk1tmp8rdo6_640.jpg">
-          </div>
+          <img src="https://66.media.tumblr.com/336278e71b4ecf8dbdb694cf8453008e/tumblr_pizj49eSnk1tmp8rdo6_640.jpg">
+        </div>
         <!--Row 2-->
         <div class="half-image loading-icon">
           <img src="https://66.media.tumblr.com/f6a265fd69b94f24476fe891a40e3e58/tumblr_pizj5dUNwY1tmp8rdo10_r1_1280.png">
         </div>
         <div class="half-image loading-icon">
-            <img src="https://66.media.tumblr.com/0d5976059f8b61f6ace9b2da3a17bd39/tumblr_pizj49eSnk1tmp8rdo8_1280.jpg">
-          </div>
+          <img src="https://66.media.tumblr.com/0d5976059f8b61f6ace9b2da3a17bd39/tumblr_pizj49eSnk1tmp8rdo8_1280.jpg">
+        </div>
         <!--Row 3-->
         <div class="half-image loading-icon">
-            <img src="https://66.media.tumblr.com/62b3dcbd346059101a110fd7cf6c4221/tumblr_pizj5dUNwY1tmp8rdo9_540.jpg">
-          </div>
-          <div class="half-image loading-icon">
-            <img src="https://66.media.tumblr.com/ffcdf180aeab75cf21b2bc06e98896bc/tumblr_pizj5dUNwY1tmp8rdo7_1280.jpg">
-          </div>
+          <img src="https://66.media.tumblr.com/62b3dcbd346059101a110fd7cf6c4221/tumblr_pizj5dUNwY1tmp8rdo9_540.jpg">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://66.media.tumblr.com/ffcdf180aeab75cf21b2bc06e98896bc/tumblr_pizj5dUNwY1tmp8rdo7_1280.jpg">
+        </div>
         <!--Row 4-->
         <div class="half-image loading-icon">
-            <img src="https://66.media.tumblr.com/fb99b06d71b28d32e4affc0223742dc2/tumblr_pizj5dUNwY1tmp8rdo1_640.jpg">
-          </div>
-          <div class="half-image loading-icon">
-            <img src="https://66.media.tumblr.com/40c8b1c62a99710808d57e3b703b1d1f/tumblr_pizj49eSnk1tmp8rdo7_640.jpg">
-          </div>
-           <!--Row 5-->
+          <img src="https://66.media.tumblr.com/fb99b06d71b28d32e4affc0223742dc2/tumblr_pizj5dUNwY1tmp8rdo1_640.jpg">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://66.media.tumblr.com/40c8b1c62a99710808d57e3b703b1d1f/tumblr_pizj49eSnk1tmp8rdo7_640.jpg">
+        </div>
+        <!--Row 5-->
         <div class="half-image loading-icon">
           <img src="https://66.media.tumblr.com/de3517a59f12d2956145acf18bd7505b/tumblr_pizj49eSnk1tmp8rdo5_640.jpg">
         </div>
         <div class="half-image loading-icon">
           <img src="https://66.media.tumblr.com/cc2cd6d2ed869afa45f0ec8bc7bd22b4/tumblr_pizj49eSnk1tmp8rdo9_1280.png">
         </div>
-      <!--Row 6-->
-      <div class="half-image loading-icon">
-        <img src="https://66.media.tumblr.com/73312fcae59b0b8462957472d26ec3a2/tumblr_pizj49eSnk1tmp8rdo4_1280.png">
-      </div>
-      <div class="half-image loading-icon">
-        <img src="https://66.media.tumblr.com/41e01de0f32ac6e4dba186d3ca6a8f15/tumblr_pizj49eSnk1tmp8rdo2_1280.png">
-      </div>
+        <!--Row 6-->
+        <div class="half-image loading-icon">
+          <img src="https://66.media.tumblr.com/73312fcae59b0b8462957472d26ec3a2/tumblr_pizj49eSnk1tmp8rdo4_1280.png">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://66.media.tumblr.com/41e01de0f32ac6e4dba186d3ca6a8f15/tumblr_pizj49eSnk1tmp8rdo2_1280.png">
+        </div>
         <!--Row 7-->
         <div class="half-image loading-icon">
           <img src="https://66.media.tumblr.com/3d063d6bd1cb736e3121d9b2014d1ba6/tumblr_pizj5dUNwY1tmp8rdo4_1280.png">
@@ -111,124 +114,136 @@
         <div class="half-image loading-icon">
           <img src="https://66.media.tumblr.com/16633e76f1c75e756b5c3dd1a35f624c/tumblr_pizj5dUNwY1tmp8rdo3_1280.png">
         </div>
-         <!--Row 8-->
-         <div class="half-image loading-icon">
+        <!--Row 8-->
+        <div class="half-image loading-icon">
           <img src="https://66.media.tumblr.com/c5af05d3912511c015b3a781da85091c/tumblr_pizj5dUNwY1tmp8rdo5_r1_1280.png">
         </div>
         <div class="half-image loading-icon">
           <img src="https://66.media.tumblr.com/4e09e68b9e5d4a28ce644003388f6268/tumblr_pizj5dUNwY1tmp8rdo2_r1_1280.png">
         </div>
-       <!--Row 9-->
-       <div class="half-image loading-icon">
-        <img src="https://66.media.tumblr.com/e22d4ab3eb00396afe9a6ff1858b7e51/tumblr_pizj49eSnk1tmp8rdo3_640.png">
+        <!--Row 9-->
+        <div class="half-image loading-icon">
+          <img src="https://66.media.tumblr.com/e22d4ab3eb00396afe9a6ff1858b7e51/tumblr_pizj49eSnk1tmp8rdo3_640.png">
+        </div>
       </div>
-      
+    </div>
+    
+    <!-- Section 3 -->
+    <div class="art-section">
+      <div class="art-header">
+        <h2>MONITOR GRAPHICS</h2>
+        <p>Sponsor branded graphics for IGN livestreams and convention sets.
+          Please note that some assets were made by other designers in collaboration, such as logos.</p>
       </div>
-
-      <div class="art-section">
-          <div class="art-header">
-      <h2>MONITOR GRAPHICS</h2>
-      <p>Sponsor branded graphics for IGN livestreams and convention sets. Please note that some assets were made by other designers in collaboration, such as logos.</p></div>
-         <div class="art-display">
-            <!--Row 1-->
-            <div class="full-image loading-icon">
-                <img src="https://66.media.tumblr.com/0d66ff450306881a52866774f373bd60/tumblr_pj19b9EUTD1tmp8rdo5_r1_1280.jpg">
-              </div>
-           <!--Row 2-->
-           <div class="full-image loading-icon">
-              <img src="https://66.media.tumblr.com/55d59c3d5c1b226da1f8ca86fe862a23/tumblr_pj19b9EUTD1tmp8rdo6_r1_1280.png">
-            </div>
-           <!--Row 3-->
-           <div class="half-image loading-icon">
-              <img src="https://66.media.tumblr.com/52dfde14fa12b38198f1f45a292f11d5/tumblr_pj17etb3MV1tmp8rdo5_r1_500.jpg">
-            </div>
-            <div class="half-image loading-icon">
-              <img src="https://66.media.tumblr.com/098a56c567e848c270ca04487abe848c/tumblr_pj17etb3MV1tmp8rdo6_r1_500.jpg">
-            </div>
-              <!--Row 4-->
-            <div class="half-image loading-icon">
-                <img src="https://66.media.tumblr.com/51524754ef854690c14b8c84f761fe5a/tumblr_pj17etb3MV1tmp8rdo9_r1_500.jpg">
-              </div>
-              <div class="half-image loading-icon">
-                <img src="https://66.media.tumblr.com/58e8fc49634eb076c1d090564fd537e4/tumblr_pj17etb3MV1tmp8rdo10_r1_500.jpg">
-              </div> 
-          <!--Row 5-->
-          <div class="half-image loading-icon">
-              <img src="https://66.media.tumblr.com/03398660a0ab4de3284296baa9cf4963/tumblr_pj17etb3MV1tmp8rdo7_r1_500.jpg">
-            </div>
-            <div class="half-image loading-icon">
-              <img src="https://66.media.tumblr.com/07b0e0e2f9d3f194efc9c0862926ae5a/tumblr_pj17etb3MV1tmp8rdo8_r1_500.jpg">
-            </div>
-            <!--Row 6-->
-              <div class="full-image loading-icon">
-                  <img src="https://66.media.tumblr.com/9d198db896a902158bcfce654198c6fe/tumblr_pj19b9EUTD1tmp8rdo4_r2_1280.jpg">
-                </div>
-        </div></div>
-
-
-
-
-          <div class="art-section">
-              <div class="art-header">
-          <h2>CONTENT BLOCKS</h2> <p>Content blocks are branded ads on the IGN website that link through to a video or an article.</p></div>
-          <div class="art-display">
-           <div class="full-image loading-icon">
-             <img src="https://66.media.tumblr.com/2f813b37b6794acbee55407a2952091e/tumblr_pj19b9EUTD1tmp8rdo1_r1_1280.jpg">
-           </div>
-           <div class="full-image loading-icon">
-             <img src="https://66.media.tumblr.com/2d756a0c9239d9b85cfd890609516b5a/tumblr_pj19b9EUTD1tmp8rdo2_r1_1280.jpg">
-           </div>
-           <div class="full-image loading-icon">
-              <img src="https://66.media.tumblr.com/d3a057c225f465a4205b3fb36a3f851d/tumblr_pj19b9EUTD1tmp8rdo3_r1_1280.jpg">
-            </div>
-          </div></div>
-
-
-           <div class="art-section">
-           <div class="art-header">
-          <h2>SETLISTS</h2>
+      <div class="art-display">
         <!--Row 1-->
-        <div class="art-display">
+        <div class="full-image loading-icon">
+          <img src="https://66.media.tumblr.com/0d66ff450306881a52866774f373bd60/tumblr_pj19b9EUTD1tmp8rdo5_r1_1280.jpg">
+        </div>
+        <!--Row 2-->
+        <div class="full-image loading-icon">
+          <img src="https://66.media.tumblr.com/55d59c3d5c1b226da1f8ca86fe862a23/tumblr_pj19b9EUTD1tmp8rdo6_r1_1280.png">
+        </div>
+        <!--Row 3-->
+        <div class="half-image loading-icon">
+          <img src="https://66.media.tumblr.com/52dfde14fa12b38198f1f45a292f11d5/tumblr_pj17etb3MV1tmp8rdo5_r1_500.jpg">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://66.media.tumblr.com/098a56c567e848c270ca04487abe848c/tumblr_pj17etb3MV1tmp8rdo6_r1_500.jpg">
+        </div>
+        <!--Row 4-->
+        <div class="half-image loading-icon">
+          <img src="https://66.media.tumblr.com/51524754ef854690c14b8c84f761fe5a/tumblr_pj17etb3MV1tmp8rdo9_r1_500.jpg">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://66.media.tumblr.com/58e8fc49634eb076c1d090564fd537e4/tumblr_pj17etb3MV1tmp8rdo10_r1_500.jpg">
+        </div> 
+        <!--Row 5-->
+        <div class="half-image loading-icon">
+          <img src="https://66.media.tumblr.com/03398660a0ab4de3284296baa9cf4963/tumblr_pj17etb3MV1tmp8rdo7_r1_500.jpg">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://66.media.tumblr.com/07b0e0e2f9d3f194efc9c0862926ae5a/tumblr_pj17etb3MV1tmp8rdo8_r1_500.jpg">
+        </div>
+        <!--Row 6-->
+        <div class="full-image loading-icon">
+          <img src="https://66.media.tumblr.com/9d198db896a902158bcfce654198c6fe/tumblr_pj19b9EUTD1tmp8rdo4_r2_1280.jpg">
+        </div>
+      </div>
+    </div>
+
+    <!-- Section 3 -->
+    <div class="art-section">
+      <div class="art-header">
+        <h2>CONTENT BLOCKS</h2>
+        <p>Content blocks are branded ads on the IGN website that link through to a video or an article.</p>
+      </div>
+      <div class="art-display">
+        <!--Row 1-->
+        <div class="full-image loading-icon">
+          <img src="https://66.media.tumblr.com/2f813b37b6794acbee55407a2952091e/tumblr_pj19b9EUTD1tmp8rdo1_r1_1280.jpg">
+        </div>
+        <!--Row 2-->
+        <div class="full-image loading-icon">
+          <img src="https://66.media.tumblr.com/2d756a0c9239d9b85cfd890609516b5a/tumblr_pj19b9EUTD1tmp8rdo2_r1_1280.jpg">
+        </div>
+        <!--Row 3-->
+        <div class="full-image loading-icon">
+          <img src="https://66.media.tumblr.com/d3a057c225f465a4205b3fb36a3f851d/tumblr_pj19b9EUTD1tmp8rdo3_r1_1280.jpg">
+        </div>
+      </div>
+    </div>
+
+    <!-- Section 4 -->
+    <div class="art-section">
+      <div class="art-header">
+        <h2>SETLISTS</h2>
+      </div>
+      <div class="art-display">
+        <!--Row 1-->
         <div class="quarter-image loading-icon">
           <img src="https://66.media.tumblr.com/fdafcacff45cffae9e207eafef78b92a/tumblr_piziu5dhLr1tmp8rdo2_500.jpg">
         </div>
         <div class="quarter-image loading-icon">
-            <img src="https://66.media.tumblr.com/4371bcb618d47643c54ee4ab8dddff26/tumblr_piziu5dhLr1tmp8rdo3_500.jpg">
-          </div>
+          <img src="https://66.media.tumblr.com/4371bcb618d47643c54ee4ab8dddff26/tumblr_piziu5dhLr1tmp8rdo3_500.jpg">
+        </div>
         <div class="quarter-image loading-icon">
           <img src="https://66.media.tumblr.com/b031339cf0bb47922c00c3745716f0d0/tumblr_piziu5dhLr1tmp8rdo4_500.jpg">
-        </div></div>
-         <!--Row 2-->
-         <div class="art-display">
+        </div>
+      </div>
+      <div class="art-display">
+        <!--Row 2-->
         <div class="quarter-image loading-icon">
-            <img src="https://66.media.tumblr.com/71ccef6bc5269dfefd12f75fdd0a1bc3/tumblr_piziu5dhLr1tmp8rdo5_500.jpg">
-          </div>
+          <img src="https://66.media.tumblr.com/71ccef6bc5269dfefd12f75fdd0a1bc3/tumblr_piziu5dhLr1tmp8rdo5_500.jpg">
+        </div>
         <div class="quarter-image loading-icon">
           <img src="https://66.media.tumblr.com/4f8402fd083d3b72c9d0be260fe7d1ab/tumblr_piziu5dhLr1tmp8rdo1_500.jpg">
         </div>
         <div class="quarter-image loading-icon">
           <img src="https://66.media.tumblr.com/d00e7db54f15db38b9f014bf78e82791/tumblr_piziu5dhLr1tmp8rdo6_500.jpg">
-        </div></div></div>
-         <!--Row 3-->
+        </div>
+      </div>
+    </div>
 
-      <div class="art-section">
-         <div class="art-header">
-         <h2>RETAIL MODULES</h2>
-         <div class="art-display">
-          <div class="quarter-image loading-icon">
-            <img src="https://66.media.tumblr.com/5ea265e4123e8ab4bd012c276678f8f8/tumblr_pj17etb3MV1tmp8rdo2_r1_400.jpg">
-          </div>
-          <div class="quarter-image loading-icon">
-            <img src="https://66.media.tumblr.com/4ab629cbb1afc2785b9c15acac6f46a0/tumblr_pj17etb3MV1tmp8rdo3_400.jpg">
-          </div>
-          <div class="quarter-image loading-icon">
-              <img src="https://66.media.tumblr.com/26299669f10bea11be0deb26f9848c3c/tumblr_pj17etb3MV1tmp8rdo4_r1_400.jpg">
-            </div>
-            <div class="quarter-image loading-icon">
-                <img src="https://66.media.tumblr.com/9ec77b4892c0e01622d26148dfeb79dd/tumblr_pj17etb3MV1tmp8rdo1_400.jpg">
-              </div>
-        </div></div>
-
+    <!-- Section 5 -->
+    <div class="art-section">
+      <div class="art-header">
+        <h2>RETAIL MODULES</h2>
+      </div>
+      <div class="art-display">
+        <!--Row 1-->
+        <div class="quarter-image loading-icon">
+          <img src="https://66.media.tumblr.com/5ea265e4123e8ab4bd012c276678f8f8/tumblr_pj17etb3MV1tmp8rdo2_r1_400.jpg">
+        </div>
+        <div class="quarter-image loading-icon">
+          <img src="https://66.media.tumblr.com/4ab629cbb1afc2785b9c15acac6f46a0/tumblr_pj17etb3MV1tmp8rdo3_400.jpg">
+        </div>
+        <div class="quarter-image loading-icon">
+          <img src="https://66.media.tumblr.com/26299669f10bea11be0deb26f9848c3c/tumblr_pj17etb3MV1tmp8rdo4_r1_400.jpg">
+        </div>
+        <div class="quarter-image loading-icon">
+          <img src="https://66.media.tumblr.com/9ec77b4892c0e01622d26148dfeb79dd/tumblr_pj17etb3MV1tmp8rdo1_400.jpg">
+        </div>
       </div>
       <hr>
     </div>
