--- a/roadblock.html
+++ b/roadblock.html
@@ -39,12 +39,12 @@
       <div id="menu-hamburger" class="menu-closed">
         <img src="img/bar_menu.svg" alt="menu">
       </div>
-      <div id="menu-links">
+      <nav id="menu-links">
         <span><a href="https://www.kathleenoum.com">Portfolio</a></span>
         <span><a target="_blank" href="https://drive.google.com/file/d/1irmmwqjdb_iXT6rve7aoKs-2bKsjp2nm/view">Resume</a></span>
         <span><a href="about.html">About</a></span>
         <span><a href="contact.html">Contact</a></span>
-      </div>
+      </nav>
     </div>
   </div>
 
