--- a/youtube.html
+++ b/youtube.html
@@ -32,7 +32,7 @@
 <body>
   <div id="header">
     <div id="logo">
-      <h1><a href="https://www.kathleenoum.com">Kathleen Oum</a></h1>
+      <h1><a href="/">Kathleen Oum</a></h1>
       <h2>Graphic &amp; Motion Design</h2>
     </div>
     <div id="menu">
@@ -87,7 +87,7 @@
         </div>
         <!-- Row 5 -->
         <div class="art-sub-header">
-          <p>Sidebar and challenge progress graphics that highlight as the player completes a milestone.</p>
+          <p>Select outro commissions done for YouTubers.</p>
         </div>
         <div class="half-image loading-icon">
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/wolf-outro_orig.gif">
