--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
 <body>
   <div id="header">
     <div id="logo">
-      <h1><a href="https://www.kathleenoum.com">Kathleen Oum</a></h1>
+      <h1><a href="/">Kathleen Oum</a></h1>
       <h2>Graphic &amp; Motion Design</h2>
     </div>
     <div id="menu">
@@ -40,7 +40,7 @@
         <img src="img/bar_menu.svg" alt="menu">
       </div>
       <nav id="menu-links">
-        <span><a href="https://www.kathleenoum.com">Portfolio</a></span>
+        <span><a href="/">Portfolio</a></span>
         <span><a target="_blank" href="https://drive.google.com/file/d/1irmmwqjdb_iXT6rve7aoKs-2bKsjp2nm/view">Resume</a></span>
         <span><a href="about.html">About</a></span>
         <span><a class="active-link" href="contact.html">Contact</a></span>
