--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
   <div id="header">
     <div id="logo">
-      <h1><a href="https://www.kathleenoum.com">Kathleen Oum</a></h1>
+      <h1><a href="/">Kathleen Oum</a></h1>
       <h2>Graphic &amp; Motion Design</h2>
     </div>
     <div id="menu">
