--- a/antman.html
+++ b/antman.html
@@ -83,7 +83,7 @@
         </div></div>
         <!--Animated versions-->
         <div class="art-display">
-            <p>Cams over footage</p>
+            <p>Animated cams over footage</p>
           <div class="half-image loading-icon">
             <img src="https://media.giphy.com/media/4Tf0YvlhVyNqUdCAjy/giphy.gif">
           </div>
