--- a/manga.html
+++ b/manga.html
@@ -109,7 +109,9 @@
     
         <div class="art-display">
                 <div class="half-image">
+                    <div class="art-header">
                         <p>Some non-manga motion artwork:</p>
+                    </div>
                     <img src="https://66.media.tumblr.com/25e46b373a721d26e54820fe46466d9e/tumblr_pitsk0uLcD1tmp8rdo10_r1_540.png">
                     <img src="https://media.giphy.com/media/xUPGculjayyugM9FxC/giphy.gif">
                 </div>
