--- a/manga.html
+++ b/manga.html
@@ -107,16 +107,21 @@
             </div>
     </div>
     
-        <div class="art-display">
-                <div class="half-image">
-                    <div class="art-header">
-                        <p>Some non-manga motion artwork:</p>
-                    </div>
-                    <img src="https://66.media.tumblr.com/25e46b373a721d26e54820fe46466d9e/tumblr_pitsk0uLcD1tmp8rdo10_r1_540.png">
-                    <img src="https://media.giphy.com/media/xUPGculjayyugM9FxC/giphy.gif">
-                </div>
-        </div>
+
+    <div class="art-display">
+        <div class="half-image">
+            <p>Some non-manga motion artwork:</p>
+            <img src="https://66.media.tumblr.com/25e46b373a721d26e54820fe46466d9e/tumblr_pitsk0uLcD1tmp8rdo10_r1_540.png">
+            <img src="https://media.giphy.com/media/xUPGculjayyugM9FxC/giphy.gif">
+          </div>
       </div>
+
+      <div class="art-display">
+          <div class="half-image">
+            <img src="https://66.media.tumblr.com/f86b28733b6c78ad52ea4b48bb518fe7/tumblr_pitsk0uLcD1tmp8rdo8_r1_540.jpg">
+            <img src="https://media.giphy.com/media/3o7bu0Qj4MVGlinv7a/giphy.gif">
+          </div>
+        </div>
 
       <div class="art-display">
         <div class="half-image">
