--- a/ads.html
+++ b/ads.html
@@ -166,6 +166,13 @@
           <img src="https://66.media.tumblr.com/07b0e0e2f9d3f194efc9c0862926ae5a/tumblr_pj17etb3MV1tmp8rdo8_r1_500.jpg">
         </div>
         <!--Row 6-->
+        <div class="half-image loading-icon">
+            <img src="https://66.media.tumblr.com/1de6aff1e4546e60c79516995567140f/tumblr_pj19b9EUTD1tmp8rdo8_r1_640.png">
+          </div>
+          <div class="half-image loading-icon">
+            <img src="https://66.media.tumblr.com/54bde8daf9500aed08e7e0921e63cdd6/tumblr_pj19b9EUTD1tmp8rdo7_r1_640.jpg">
+          </div>
+        <!--Row 7-->
         <div class="full-image loading-icon">
           <img src="https://66.media.tumblr.com/9d198db896a902158bcfce654198c6fe/tumblr_pj19b9EUTD1tmp8rdo4_r2_1280.jpg">
         </div>
