--- a/miniscroller.html
+++ b/miniscroller.html
@@ -49,29 +49,72 @@
   </div>
 
   <div id="content">
-    <!-- Section 1 -->
+    <!-- Section 3 --> 
     <div class="art-section">
       <div class="art-header">
-        <h2>Miniscrollers</h2>
-        <p>Homepage roadblocks are IGN website takeovers where a client can have three different 1900x500 banners loop as the user infinitely scrolls down.
-          These are typically accompanied by a 300x500 unit and/or a sponsored content block.
-          Autoplay videos and embedded videos are sometimes included in these banners.</p>
-      </div>
-      <hr>
-    </div>
-
-    <!-- Section 2 -->
-    <div class="art-section">
-      <div class="art-header">
-        <h2>Okami HD</h2>
-        <p><a class="active-link" target="_blank" href="http://ign.celtra.com/preview/a94d9c05">Scroll here!</a> (disable any ad blockers)</p>
+        <h2>IGN - Miniscrollers</h2>
+        <p>Miniscrollers are sponsored mobile units that animate as a user scrolls down their phone on the IGN website.  These are made using Photoshop for the design and editing of assets and then animated and built out in Celtra.  Clients, such as Best Buy, sometimes design their own and IGN builds it out.</p><br>
+        <p>Click on the images below to view the animation.</p>
       </div>
       <div class="art-display">
-        <!-- Row 1 -->
-        <div class="full-image loading-icon">
-          <img src="https://static1.squarespace.com/static/5abd1e517e3c3a8774569b21/t/5babcecc53450a3b2b5d8f37/1537986284208/okami.jpg?format=500w">
+        <div class="quarter-image loading-icon">
+          Okami HD
+          <a class="active-link" target="_blank" href="http://ign.celtra.com/preview/a94d9c05">
+          <img src="https://66.media.tumblr.com/ef3742865aa7bcc6d0326aa54985227e/tumblr_pje6cjXHWJ1tmp8rdo9_640.jpg"></a>
+        </div>
+        <div class="quarter-image loading-icon">
+          Dead Rising 4
+          <a class="active-link" target="_blank" href="http://ign.celtra.com/preview/7c0ba337">
+          <img src="https://66.media.tumblr.com/5e7016fc459b6f65898b1a3a0a2b4610/tumblr_pje6cjXHWJ1tmp8rdo8_640.jpg"></a>
+        </div>
+        <div class="quarter-image loading-icon">
+            Fortnite Launch
+            <a class="active-link" target="_blank" href="http://ign.celtra.com/preview/ee239208">
+            <img src="https://66.media.tumblr.com/b76de98cd1fd1588a5be3b0cdcc5ebdb/tumblr_pje6cjXHWJ1tmp8rdo5_540.png"></a>
+          </div>
+      </div>
+    </div>
+
+    <div class="art-section">
+        <div class="art-header">
+    <div class="art-display">
+        <div class="quarter-image loading-icon">
+          HP Omen ft. Biofrost
+          <a class="active-link" target="_blank" href="http://ign.celtra.com/preview/3891e1fb">
+          <img src="https://66.media.tumblr.com/72f62e329c53c608f3620e509d0af9e3/tumblr_pje6cjXHWJ1tmp8rdo6_640.png"></a>
+        </div>
+        <div class="quarter-image loading-icon">
+          GameStop: Fall Titles
+          <a class="active-link" target="_blank" href="http://ign.celtra.com/preview/d359c7a8">
+          <img src="https://66.media.tumblr.com/ca37e1173322fa7700601416ea31da18/tumblr_pje6cjXHWJ1tmp8rdo2_640.png"></a>
+        </div>
+        <div class="quarter-image loading-icon">
+          Best Buy: Dell Computing
+          <a class="active-link" target="_blank" href="http://ign.celtra.com/preview/79022f34"><img src="https://66.media.tumblr.com/90c164177bc6c63378365fe44c26db3a/tumblr_pje6cjXHWJ1tmp8rdo3_640.png"></a>
         </div>
       </div>
+    </div>
+
+
+    <div class="art-section">
+        <div class="art-header">
+    <div class="art-display">
+        <div class="quarter-image loading-icon">
+          HP: September Gaming
+          <a class="active-link" target="_blank" href="http://ign.celtra.com/preview/783063ec">
+          <img src="https://66.media.tumblr.com/ee37de82fb94cedbaf1aed902b2971af/tumblr_pje6cjXHWJ1tmp8rdo1_640.png"></a>
+        </div>
+        <div class="quarter-image loading-icon">
+            Resident Evil
+            <a class="active-link" target="_blank" href="http://ign.celtra.com/preview/94340d38"><img src="https://66.media.tumblr.com/9e916ef4c490d23f1acd391032c16d8e/tumblr_pje6cjXHWJ1tmp8rdo7_640.png"></a>
+          </div>
+        <div class="quarter-image loading-icon">
+          Best Buy: Dell Computing
+          <a class="active-link" target="_blank" href="http://ign.celtra.com/preview/d913da5c"><img src="https://66.media.tumblr.com/a9080fb6a58582400430910c6a4e1046/tumblr_pje6cjXHWJ1tmp8rdo4_640.png"></a>
+        </div>
+      </div>
+    </div>
+
       <hr>
     </div>
   </div>
