--- a/manga.html
+++ b/manga.html
@@ -65,6 +65,14 @@
         </div>
       </div>
 
+      <!--Haise Jump-->
+      <div class="art-display">
+        <div class="half-image">
+          <img src="https://puu.sh/tY3ly/dbfb233c93.png">
+          <img src="https://media.giphy.com/media/26xBGqnWsLHFRYLrG/giphy.gif">
+        </div>
+    </div>
+
       <!--Juuzou-->
     <div class="art-display">
             <div class="half-image">
@@ -73,11 +81,11 @@
             </div>
           </div>
 
-      <!--Haise Jump-->
+      <!--Owari-->
       <div class="art-display">
         <div class="half-image">
-          <img src="https://puu.sh/tY3FR/594caa0267.png">
-          <img src="https://media.giphy.com/media/d1E2pMuuM6zJ0CuQ/source.gif">
+          <img src="https://puu.sh/uBd0H/3b786a7ba3.png">
+          <img src="https://media.giphy.com/media/xUPGcAYFrg2DprS3m0/source.gif">
         </div>
     </div>
 
