fix antman and manga pages

--- a/manga.html
+++ b/manga.html
@@ -58,78 +58,74 @@
       </div>
       <div class="art-display">
         <div class="half-image">
-            <p>Original:</p>
+          <p>Original:</p>
           <img src="https://66.media.tumblr.com/91108ed66dd2c52f9a6fe6c9a51592e5/tumblr_pex4rlQRen1tmp8rdo8_r1_500.jpg">
           <p>Animated:</p>
           <img src="https://media.giphy.com/media/26xBzOpqWotU9zSH6/source.gif">
         </div>
       </div>
-
       <!--Haise Jump-->
       <div class="art-display">
         <div class="half-image">
           <img src="https://puu.sh/tY3ly/dbfb233c93.png">
           <img src="https://media.giphy.com/media/26xBGqnWsLHFRYLrG/giphy.gif">
         </div>
-    </div>
-
+      </div>
       <!--Juuzou-->
-    <div class="art-display">
-            <div class="half-image">
-              <img src="https://vignette.wikia.nocookie.net/tokyoghoul/images/2/2f/Suzuya%27s_introduction_in_re.png/revision/20161217050056">
-              <img src="https://media.giphy.com/media/d1E2pMuuM6zJ0CuQ/source.gif">
-            </div>
-          </div>
-
+      <div class="art-display">
+        <div class="half-image">
+          <img src="https://puu.sh/tY3FR/594caa0267.png">
+          <img src="https://media.giphy.com/media/d1E2pMuuM6zJ0CuQ/source.gif">
+        </div>
+      </div>
       <!--Owari-->
       <div class="art-display">
         <div class="half-image">
           <img src="https://puu.sh/uBd0H/3b786a7ba3.png">
           <img src="https://media.giphy.com/media/xUPGcAYFrg2DprS3m0/source.gif">
         </div>
-    </div>
-
-     <!--Prosthetic-->
-    <div class="art-display">
+      </div>
+      <!--Prosthetic-->
+      <div class="art-display">
         <div class="half-image">
-            <img src="https://vignette.wikia.nocookie.net/tokyoghoul/images/d/d2/Suzuya_reveals_Scorpion_hidden_inside_his_prosthetic_leg.png/revision/latest?cb=20160425194531">
-            <img src="https://media.giphy.com/media/26gsw3Y2BugJZDEe4/source.gif">
+          <img src="https://vignette.wikia.nocookie.net/tokyoghoul/images/d/d2/Suzuya_reveals_Scorpion_hidden_inside_his_prosthetic_leg.png/revision/latest?cb=20160425194531">
+          <img src="https://media.giphy.com/media/26gsw3Y2BugJZDEe4/source.gif">
         </div>
       </div>
-    </div>
-
-    <!--Seidou-->
-    <div class="art-display">
-            <div class="half-image">
-                <img src="https://puu.sh/uOxwD/c7e1a1c682.png">
-                <img src="https://media.giphy.com/media/3o7btYkQNdWEOfDLwc/source.gif">
-            </div>
+      <!--Seidou-->
+      <div class="art-display">
+        <div class="half-image">
+          <img src="https://puu.sh/uOxwD/c7e1a1c682.png">
+          <img src="https://media.giphy.com/media/3o7btYkQNdWEOfDLwc/source.gif">
         </div>
       </div>
-
-    <!--Arima and Kaneki-->
-    <div class="art-display">
-            <div class="half-image">
-                <img src="https://66.media.tumblr.com/bd469ee24d172520dd6021df48dcb9de/tumblr_pex4rlQRen1tmp8rdo9_r2_640.jpg">
-                <img src="https://media.giphy.com/media/l0ExdVlwMVAxOF8Yw/source.gif">
-            </div>
+      <!--Arima and Kaneki-->
+      <div class="art-display">
+        <div class="half-image">
+          <img src="https://66.media.tumblr.com/bd469ee24d172520dd6021df48dcb9de/tumblr_pex4rlQRen1tmp8rdo9_r2_640.jpg">
+          <img src="https://media.giphy.com/media/l0ExdVlwMVAxOF8Yw/source.gif">
+        </div>
+      </div>
     </div>
     
-
-    <div class="art-display">
+    <!-- Section 2 -->
+    <div class="art-section">
+      <div class="art-header">
+        <p>Some non-manga motion artwork:</p>
+      </div>
+      <div class="art-display">
         <div class="half-image">
-            <p>Some non-manga motion artwork:</p>
-            <img src="https://66.media.tumblr.com/25e46b373a721d26e54820fe46466d9e/tumblr_pitsk0uLcD1tmp8rdo10_r1_540.png">
-            <img src="https://media.giphy.com/media/xUPGculjayyugM9FxC/giphy.gif">
-          </div>
+          <img src="https://66.media.tumblr.com/25e46b373a721d26e54820fe46466d9e/tumblr_pitsk0uLcD1tmp8rdo10_r1_540.png">
+          <img src="https://media.giphy.com/media/xUPGculjayyugM9FxC/giphy.gif">
+        </div>
       </div>
 
       <div class="art-display">
-          <div class="half-image">
-            <img src="https://66.media.tumblr.com/f86b28733b6c78ad52ea4b48bb518fe7/tumblr_pitsk0uLcD1tmp8rdo8_r1_540.jpg">
-            <img src="https://media.giphy.com/media/3o7bu0Qj4MVGlinv7a/giphy.gif">
-          </div>
+        <div class="half-image">
+          <img src="https://66.media.tumblr.com/f86b28733b6c78ad52ea4b48bb518fe7/tumblr_pitsk0uLcD1tmp8rdo8_r1_540.jpg">
+          <img src="https://media.giphy.com/media/3o7bu0Qj4MVGlinv7a/giphy.gif">
         </div>
+      </div>
 
       <div class="art-display">
         <div class="half-image">
