--- a/antman.html
+++ b/antman.html
@@ -98,19 +98,23 @@
         <!-- Row 2 -->
         <div class="full-image loading-icon">
           <img src="https://78.media.tumblr.com/7ecc5927975bef7076fc549582059b65/tumblr_pcjls4WIzE1tmp8rdo2_1280.png">
-        </div></div>
-        <!--Animated versions-->
-        <div class="art-display">
-            <p>Animated cams over footage</p>
-          <div class="half-image loading-icon">
-            <img src="https://media.giphy.com/media/4Tf0YvlhVyNqUdCAjy/giphy.gif">
-          </div>
-          <div class="half-image loading-icon">
-              <img src="https://media.giphy.com/media/eF8AlSjnH94V503Dej/giphy.gif">
-            </div></div>
-          <!--Snipe-->
-      <div class="art-display">
+        </div>
+        <!-- Row 3 -->
+        <!-- Animated versions -->
+        <div class="art-sub-header">
+          <p>Animated cams over footage</p>
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://media.giphy.com/media/4Tf0YvlhVyNqUdCAjy/giphy.gif">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://media.giphy.com/media/eF8AlSjnH94V503Dej/giphy.gif">
+        </div>
+        <!-- Row 4 -->
+        <!-- Snipes -->
+        <div class="art-sub-header">
           <p>Animated the branded snipes that appear for a few seconds on the cams </p>
+        </div>
         <div class="half-image loading-icon">
           <img src="https://puu.sh/B3Jag/9af428f1e2.gif">
         </div>
