--- a/manga.html
+++ b/manga.html
@@ -74,7 +74,7 @@
       <!--Juuzou-->
       <div class="art-display">
         <div class="half-image">
-          <img src="https://puu.sh/tY3FR/594caa0267.png">
+          <img src="https://66.media.tumblr.com/5be13f2017b6c4c303294f231f8fa5f1/tumblr_plgd0eA6Jw1tmp8rdo1_540.jpg">
           <img src="https://media.giphy.com/media/d1E2pMuuM6zJ0CuQ/source.gif">
         </div>
       </div>
@@ -88,7 +88,7 @@
       <!--Prosthetic-->
       <div class="art-display">
         <div class="half-image">
-          <img src="https://vignette.wikia.nocookie.net/tokyoghoul/images/d/d2/Suzuya_reveals_Scorpion_hidden_inside_his_prosthetic_leg.png/revision/latest?cb=20160425194531">
+          <img src="https://i.pinimg.com/originals/04/f6/02/04f602d739ed3a3737112b6335da1fef.png">
           <img src="https://media.giphy.com/media/26gsw3Y2BugJZDEe4/source.gif">
         </div>
       </div>
