manga image fix

--- a/manga.html
+++ b/manga.html
@@ -88,7 +88,7 @@
       <!--Prosthetic-->
       <div class="art-display">
         <div class="half-image">
-          <img src="https://i.pinimg.com/originals/04/f6/02/04f602d739ed3a3737112b6335da1fef.png">
+          <img src="https://i.pinimg.com/736x/04/f6/02/04f602d739ed3a3737112b6335da1fef--prosthetic-leg-read-tokyo-ghoul.jpg">
           <img src="https://media.giphy.com/media/26gsw3Y2BugJZDEe4/source.gif">
         </div>
       </div>
