--- a/manga.html
+++ b/manga.html
@@ -88,7 +88,7 @@
       <!--Prosthetic-->
       <div class="art-display">
         <div class="half-image">
-          <img src="https://vignette.wikia.nocookie.net/tokyoghoul/images/d/d2/Suzuya_reveals_Scorpion_hidden_inside_his_prosthetic_leg.png/revision/latest?cb=20160425194531">
+          <img src="https://i.pinimg.com/736x/04/f6/02/04f602d739ed3a3737112b6335da1fef--prosthetic-leg-read-tokyo-ghoul.jpg">
           <img src="https://media.giphy.com/media/26gsw3Y2BugJZDEe4/source.gif">
         </div>
       </div>
